[package]
name = "rocket-config"
version = "0.0.1"
authors = ["CugeDe <cugede.0x07ffff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at hwttps://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
rocket = "0.4.2"
serde_json = "1.0"
serde_yaml = "0.8"
rocket-config-codegen = { version = "0.0.1", path = "../codegen" }

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
tempfile = "3.1"
