[package]
name = "rocket-config"
version = "0.0.2"
authors = ["CugeDe <cugede.0x07ffff@gmail.com>"]
description = """
Rust library providing a plugin loading and managing configuration files for
Rocket.
"""
repository = "https://github.com/CugeDe/rocket-config"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "../README.md"
keywords = ["rocket", "rocket-config", "config"]

# See more keys and their definitions at hwttps://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket-config-codegen = { path = "../codegen", version = "0.0" }
lazy_static = "1.4"
rocket = "0.4.2"
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dev-dependencies]
tempfile = "3.1"